# mansale-launchpad

./: .eslintignore  .eslintrc.cjs  .yarnrc.yml  LICENCE  README.md  jest.config.cjs  jest.setup.cjs  next.config.mjs  package.json  tsconfig.json
.github/workflows/: npm_test.yml
components/common/: ConfirmModal.tsx  ContactIcons.module.css  ContactIcons.tsx  ResultModal.tsx
components/contexts/: RootProvider.tsx  TxContext.tsx  WalletProvider.tsx
components/index/Welcome/: Welcome.tsx
components/layouts/: Navbar.tsx  Sidebar.tsx  index.tsx  style.module.css
components/layouts/components/: NavbarLink.tsx
components/pages/home/: Features.tsx
components/pages/home/Welcome/: Welcome.test.tsx  Welcome.tsx
onchain/: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  package.json
onchain/migrations/: deploy.ts
onchain/programs/mans/: Cargo.toml
onchain/programs/mans/src/: lib.rs
onchain/tests/: mans.ts
pages/: _app.tsx  index.tsx
pages/404/: 404.style.module.css  index.tsx
pages/community/: index.tsx
pages/contact/: index.tsx  style.module.css
pages/docs/: index.tsx
pages/faqs/: index.tsx  style.module.css
pages/home/: index.tsx  page.tsx
pages/launchpads/airdrop/: index.tsx
pages/launchpads/presale/: index.tsx
pages/launchpads/token/: index.tsx
pages/profile/: index.tsx
pages/tokens/: index.tsx  style.module.css
utils/: constants.ts  context.tsx
utils/types/: types.ts
